fix country list horizontal scroll issue

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -613,6 +613,7 @@ b {
 
   li .container {
     position: relative;
+    width: 100%;
   }
 
   li .container.is-sovereignty {
